--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   collection: ^1.17.2
   google_maps_flutter: ^2.5.3
   http: ^1.2.1
-
+  google_maps_flutter_web: ^0.5.4+2 # (или более новая версия с pub.dev)
+  webview_flutter_web: ^0.2.2+4     # (или более новая версия с pub.dev)
   # Пакет для выбора изображений из галереи
   image_picker: ^1.1.2
   # The following adds the Cupertino Icons font to your application.
