--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,35 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"steppe-compas","appId":"1:845834716358:android:2885042033c411253583c7","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"steppe-compas","configurations":{"web":"1:845834716358:web:30dd28646e120d6f3583c7"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "steppe-compas",
+          "appId": "1:845834716358:android:2885042033c411253583c7",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "steppe-compas",
+          "configurations": {
+            "web": "1:845834716358:web:30dd28646e120d6f3583c7"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
+}
