--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_animate: ^4.5.0
   file_picker: ^8.0.0
+  photo_view: ^0.14.0
   webview_windows: ^0.4.0
   webview_flutter: ^4.7.0
   geolocator: ^12.0.0
