--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+10
+version: 1.0.0+14
 
 environment:
   sdk: ^3.7.2
@@ -66,6 +66,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -119,9 +120,15 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/yurt.png"
+
+  image_path: "assets/icons/main_icon.png"
   adaptive_icon_background: "#ffffff" # фон (для Android adaptive icons)
-  adaptive_icon_foreground: "assets/icons/yurt.png"
+  adaptive_icon_foreground: "assets/icons/main_icon.png"
+  web:
+    generate: true
+    image_path: "assets/icons/main_icon.png" # можно ту же
+    background_color: "#ffffff"
+    theme_color: "#ffffff"
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
